feat: implement event replay mechanism
- rebuild projections from event store
- introduce temporary tables for safe swap
- ensure deterministic timestamps using event occurredAt